# grafbase

./: Cargo.toml  flake.nix  pnpm-lock.yaml
cli/crates/backend/: Cargo.toml  build.rs
cli/crates/backend/src/api/graphql/: api.graphql
cli/crates/backend/src/api/graphql/types/: mutations.rs
cli/crates/cli/: Cargo.toml
cli/crates/cli/src/: cli_input.rs  main.rs  publish.rs  schema.rs  subgraphs.rs
cli/crates/cli/tests/: dev.rs
cli/crates/cli/tests/utils/: environment.rs
cli/crates/server/: Cargo.toml  build.rs
cli/crates/server/src/: consts.rs  servers.rs
cli/crates/server/src/bridge/: udf.rs
cli/crates/typed-resolvers/: Cargo.toml
cli/crates/typed-resolvers/src/: analyze.rs  codegen.rs  lib.rs  type_extensions_from_resolver.rs
cli/crates/typed-resolvers/tests/: resolver_discovery.rs
cli/crates/typed-resolvers/tests/resolver_discovery/bad_parents/: expected.out  schema.graphql
cli/crates/typed-resolvers/tests/resolver_discovery/bad_parents/resolvers/: noTypeAnnotation.ts
cli/crates/typed-resolvers/tests/resolver_discovery/basic/: expected.out  schema.graphql
cli/crates/typed-resolvers/tests/resolver_discovery/basic/resolvers/: friends.ts  nestedArray.ts  stronger.ts  userFullName.ts
cli/crates/typed-resolvers/tests/resolver_discovery/errors/: expected.out
cli/crates/typed-resolvers/tests/resolver_discovery/errors/resolvers/: argsShape.ts  missingReturnType.ts  noName.ts
crates/composition/tests/composition/demo/: supergraph.graphql
