[workspace]
members = [
    "cli/crates/*",
    "engine/crates/*",
    "engine/crates/engine/derive",
    "engine/crates/engine/parser",
    "engine/crates/engine/value"
]

resolver = "2"

[patch.crates-io]
again = { git = "https://github.com/grafbase/again", branch = "cloudflare-workers-compatibility" }
# Use our fork of dynomite that uses the 0.48 version of rusoto.
dynomite = { git = "https://github.com/grafbase/dynomite", branch = "rusoto-0_48" }
rusoto_core = { git = "https://github.com/grafbase/rusoto", branch = "wasm-rustls-0_48-reqwest" }
rusoto_dynamodb = { git = "https://github.com/grafbase/rusoto", branch = "wasm-rustls-0_48-reqwest" }
# FIXME: Drop on next release.
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "839623312f8359b173437fb01b1932f204449cca" }
serde_with = { git = "https://github.com/grafbase/serde_with", rev = "00b1e328bf4ce750e01ea2450dcfe83e4955f2af" }
ulid = { git = "https://github.com/grafbase/ulid-rs", rev = "6d06156193d51a2db3216f058cbfadd4923df2c7" }


[workspace.package]
version = "0.41.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
repository = "https://github.com/grafbase/grafbase"

[workspace.dependencies]
axum = "0.6"
# Temporary change till https://github.com/alexcrichton/tar-rs/pull/319 is released
tar = { git = "https://github.com/obmarg/tar-rs.git", rev = "bffee32190d531c03d806680daebd89cb1544be1" }
ulid = { git = "https://github.com/grafbase/ulid-rs", rev = "6d06156193d51a2db3216f058cbfadd4923df2c7" }

async-trait = "0.1"
again = "0.1"
base64 = "0.21"
bytes = "1"
bitflags = "2"
chrono = { version = "0.4", default-features = false }
flexbuffers = "2"
futures-util = "0.3"
futures = { version = "0.3" }
indexmap = { git = "https://github.com/bluss/indexmap.git", rev = "eedabaca9f84e520eab01325b305c08f3773e66c" }
itertools = "0.11"
lazy_static = "1"
num-traits = "0.2"
once_cell = "1"
regex = "1"
rstest = "0.18"
secrecy = "0.8"
strum = "0.25"
thiserror = "1"
tokio = "1"
url = "2"
uuid = "1"
wasm-bindgen = "0.2"
web-time = "0.2"
worker = "0.0.18"
http = "0.2"
headers = "0.3"

# AWS Rusoto SDK
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"

# Serde
serde = { version = "1", features = ["derive"] }
serde_dynamo = "4"
serde_json = "1"
serde-wasm-bindgen = "0.6"
serde_with = "3"

# Tracing
tracing = "0.1"
# don't bump to 0.18, leads to memory access out of bounds in cloudflare workers
tracing-subscriber = "0.3"
tracing-futures = "0.2"

dynamodb = { path = "engine/crates/dynamodb" }
engine = { path = "engine/crates/engine" }
gateway-core = { path = "engine/crates/gateway-core" }
common-types = { path = "engine/crates/common-types" }
engine-value = { path = "engine/crates/engine/value" }
gateway-adapter = { path = "engine/crates/gateway-adapter" }
gateway-adapter-local = { path = "engine/crates/gateway-adapter-local" }
gateway-types = { path = "engine/crates/gateway-types" }
graphql-extensions = { path = "engine/crates/graphql-extensions" }
log = { path = "engine/crates/log" }
dataloader = { path = "engine/crates/dataloader", features = ["tracing"] }
graph-entities = { path = "engine/crates/graph-entities" }
async-runtime = { path = "engine/crates/async-runtime" }
runtime = { path = "engine/crates/runtime" }
runtime-local = { path = "engine/crates/runtime-local" }
runtime-noop = { path = "engine/crates/runtime-noop" }
worker-env = { path = "engine/crates/worker-env" }
search-protocol = { path = "engine/crates/search-protocol" }
jwt-verifier = { path = "engine/crates/jwt-verifier" }
parser-openapi = { path = "engine/crates/parser-openapi" }
parser-graphql = { path = "engine/crates/parser-graphql" }
parser-postgres = { path = "engine/crates/parser-postgres" }

[profile.release]
strip = "symbols"
lto = false

[profile.bench]
debug = true
