[package]
name = "typed-resolvers"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
publish = false

[dependencies]
graphql-parser = "0.4"
walkdir = "2"

swc_ecma_parser = "0.141.2"
swc_ecma_ast = "0.110.0"
swc_common = "0.33"
miette = "5.10.0"
thiserror = "1.0.49"

[dev-dependencies]
similar = "2"
datatest-stable = "0.2.3"

[[test]]
name = "schema_types"
harness = false

[[test]]
name = "resolver_discovery"
harness = false
